# api/src/http/routes/transaction.routes.ts
@@ -4,12 +4,14 @@ import { createTransactionController } from '../controllers/transaction/create-t
 import { getTransactionController } from '../controllers/transaction/get-transaction.controller'
 import { listTransactionsController } from '../controllers/transaction/list-transactions.controller'
 import { deleteTransactionsController } from '../controllers/transaction/delete-transactions.controller'
+import { updateTransactionController } from '../controllers/transaction/update-transaction.controller'
 import { authenticateUserHook } from '../hooks/authenticate-user'
 import { verifyOrgAccessHook } from '../hooks/verify-user-belongs-to-org'
 import { createTransactionsSchema } from '../schemas/transaction/create-transaction.schema'
 import { getTransactionSchema } from '../schemas/transaction/get-transactions.schema'
 import { listTransactionSchema } from '../schemas/transaction/list-transactions.schema'
 import { deleteTransactionsSchema } from '../schemas/transaction/delete-transactions.schema'
+import { updateTransactionSchema } from '../schemas/transaction/update-transaction.schema'
 
 export const createTransactionRoute: FastifyPluginAsyncZod = async app => {
   app.post('/org/:slug/transaction', {
@@ -44,5 +46,14 @@ export const deleteTransactionsRoute: FastifyPluginAsyncZod = async app => {
     preHandler: [verifyOrgAccessHook],
     schema: deleteTransactionsSchema,
     handler: deleteTransactionsController,
+  })
+}
+
+export const updateTransactionRoute: FastifyPluginAsyncZod = async app => {
+  app.patch('/org/:slug/transaction/:id', {
+    onRequest: [authenticateUserHook],
+    preHandler: [verifyOrgAccessHook],
+    schema: updateTransactionSchema,
+    handler: updateTransactionController,
   })
 }
